services/terraform/remote/service_backup_fargate.tf
resource "aws_cloudwatch_log_group" "backup_service_fargate" {
  count = local.service_enabled.backup ? 1 : 0

  name              = "/ecs/backup-service-fargate-task-def"
  retention_in_days = 7
}

# Fargate task definition
resource "aws_ecs_task_definition" "backup_service_fargate" {
  count = local.service_enabled.backup ? 1 : 0

  family = "backup-service-fargate-task-def"
  container_definitions = jsonencode([
    {
      name      = local.backup_service_container_name
      image     = local.backup_service_server_image
      essential = true
      portMappings = [
        {
          name          = local.backup_sc_port_name
          containerPort = local.backup_service_container_http_port
          protocol      = "tcp"
          appProtocol   = "http"
        },
      ]
      environment = [
        {
          name  = "RUST_LOG"
          value = local.is_staging ? "info,backup=debug,comm_lib=debug" : "info"
        },
        {
          name  = "BLOB_SERVICE_URL",
          value = local.blob_fargate_url
        },
        {
          name  = "IDENTITY_SERVICE_ENDPOINT",
          value = local.identity_fargate_url
        },
        {
          name  = "COMM_SERVICES_USE_JSON_LOGS",
          value = local.comm_services_use_json_logs
        }
      ]
      logConfiguration = {
        "logDriver" = "awslogs"
        "options" = {
          "awslogs-group"         = aws_cloudwatch_log_group.backup_service_fargate[0].name
          "awslogs-region"        = "us-east-2"
          "awslogs-stream-prefix" = "ecs"
        }
      }
    }
  ])
  task_role_arn            = aws_iam_role.backup_service.arn
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = local.is_staging ? "512" : "1024"
  requires_compatibilities = ["FARGATE"]

  skip_destroy = true
}

# Fargate ECS Service
resource "aws_ecs_service" "backup_service_fargate" {
  count = local.service_enabled.backup ? 1 : 0

  name                          = "backup-service-fargate"
  cluster                       = aws_ecs_cluster.comm_services.id
  launch_type                   = "FARGATE"
  availability_zone_rebalancing = "ENABLED"

  task_definition      = aws_ecs_task_definition.backup_service_fargate[0].arn
  force_new_deployment = true

  network_configuration {
    subnets = [
      aws_subnet.public_a.id,
      aws_subnet.public_b.id,
      aws_subnet.public_c.id,
    ]
    security_groups = [
      aws_security_group.backup_service[0].id,
      aws_security_group.comm_services_internal.id,
    ]
    assign_public_ip = true
  }

  service_connect_configuration {
    enabled = true
    service {
      discovery_name = "${local.backup_sc_dns_name}-fargate"
      port_name      = local.backup_sc_port_name
      client_alias {
        port     = local.backup_service_container_http_port
        dns_name = "${local.backup_sc_dns_name}-fargate"
      }
      timeout {
        per_request_timeout_seconds = 55
      }
    }
  }

  # HTTP
  dynamic "load_balancer" {
    for_each = local.service_enabled.backup ? [
      module.shared_public_ingress.target_group_arns["backup_https"]
    ] : []
    content {
      target_group_arn = load_balancer.value
      container_name   = local.backup_service_container_name
      container_port   = local.backup_service_container_http_port
    }
  }

  deployment_circuit_breaker {
    enable   = true
    rollback = true
  }

  lifecycle {
    ignore_changes = [desired_count]
  }

  enable_execute_command  = true
  enable_ecs_managed_tags = true
}

# Auto-scaling for Fargate service
module "backup_service_fargate_autoscaling" {
  source = "../modules/fargate-autoscaling"

  create_resources = local.service_enabled.backup
  service_name = (
    local.service_enabled.backup
    ? aws_ecs_service.backup_service_fargate[0].name
    : "backup-service-fargate"
  )
  cluster_name = aws_ecs_cluster.comm_services.name

  min_capacity  = local.autoscaled_service_capacities.backup.min_capacity
  max_capacity  = local.autoscaled_service_capacities.backup.max_capacity
  cpu_target    = 40.0
  memory_target = 50.0

  scale_in_cooldown  = 300 # 5 minutes
  scale_out_cooldown = 60  # 1 minute
}
